styles.css
@import url(font-awesome.min.css);
/* @import url("https://fonts.googleapis.com/css?family=Work+Sans:300,400,500,600,700");
@import url("https://fonts.googleapis.com/css?family=DM+Sans:300,400,500,600,700");
@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700"); */
@import url("https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,500,600,700");
/* @import url("https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700");
@import url("https://fonts.googleapis.com/css?family=Quicksand:300,400,500,600,700");
@import url("https://fonts.googleapis.com/css?family=Source+Code+Pro:300,400,500,600,700");
@import url("https://fonts.googleapis.com/css?family=Comfortaa:300,400,500,600,700");
@import url("https://fonts.googleapis.com/css?family=Poiret+One:300,400,500,600,700");
@import url("https://fonts.googleapis.com/css?family=Varela:300,400,500,600,700");
@import url("https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c:300,400,500,600,700");
@import url("https://fonts.googleapis.com/css?family=Palanquin:300,400,500,600,700");
@import url("https://fonts.googleapis.com/css?family=Cabin+Sketch:300,400,500,600,700");
@import url("https://fonts.googleapis.com/css?family=Reem+Kufi:300,400,500,600,700"); */

/* RESET */

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}

/* HTML5 display-role reset for older browsers */

article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
	overflow: hidden;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

button {
	background: none;
	border: none;
	font-size: 26px;
	color: white;
	cursor: pointer;
	border: 1px solid white;
	border-radius: 10px;
	padding-top: 3px;
	padding-bottom: 6px;
	padding-left: 11px;
	padding-right: 11px;
}

button:hover {
	border: 1px solid light#595959;
}

button:focus {
	outline: 0;
}





/* CUSTOM CSS */

body {
	position: absolute;
	overflow-y: scroll;
	overflow-x: hidden;
	scroll-behavior: smooth;
	font-family: 'Josefin Sans', sans-serif;
	font-size: 5vh;
	font-weight: 500;
	text-align: center
}

.main-wrapper {
	position: absolute;
}

section {
	background: linear-gradient(white, #D3D3D3);
	position: -webkit-sticky;
	position: sticky;
	top: 0;
	width: 100vw;
	height: 100vh;
	overflow-x: hidden;
}

.bump {
	height: 9vh;
	width: 100vw;
}

.view {
	height: 80vh;
}

.white-background {
	color: #595959;
}

.header {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
}

h1 {
	font-size: 12vh;
}

p {
	font-size: 2.5vh;
	font-style: italic;
}

a {
	color: #47669d;
	text-decoration: none;
	transition: color 300ms ease, font-size 300ms ease;
}

a:hover {
	font-size: 6vh;
}

nav {
	margin: 2vh 0 6vh;
	height: 7vh;

	display: flex;
	align-items: center;
	justify-content: center;
	flex-wrap: wrap;
}

nav > a {
	margin: 0 2vh;
}

nav.persistent {
	position: fixed;
	top: 0;
	margin: 0;
	width: 100vw;
	height: 9vh;
	opacity: 0;
	transition: opacity 300ms ease;
}

nav.persistent > a {
	font-size: 4vh;
	color: #595959;
}

nav.persistent > a:hover {
	font-size: 5vh;
	color: #47669d;
}

nav.persistent.show {
	opacity: 1;
}

.divider {
	position: relative;
	background-color: rgba(71, 102, 157, 0.6);
	height: 20vh;
	color: white;
	font-size: 4vh;

	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	transition: background-color 300ms ease, color 300ms ease, font-size 300ms ease;
}

.divider:hover {
	background-color: transparent;
	color: #47669d;
	font-size: 5vh;
}

.divider.white-bg {
	background-color: transparent;
	color: #595959;
}

.divider.white-bg:hover {
	color: #47669d;
}

.divider > .scroller {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
}

h2 {
	display: flex;
	align-items: flex-end;
}

.arrow {
	font-size: 6vh !important;
	height: 5vh;
	margin: 0;

	display: flex !important;
	align-items: center;
}

.circle-container {
	width: 11vh;
	margin: 1vh 0;

	display: flex;
	align-items: center;
	justify-content: space-between;
}

.circle {
	border: 0.5vh solid #595959;
	border-radius: 2vh;
	height: 2vh;
	width: 2vh;
	transition: border 300ms ease, background-color 300ms ease;
}

.circle.filled {
	background-color: #595959;
}

.divider:not(.white-bg) .circle {
	border: 0.5vh solid white;
}

.divider:not(.white-bg) .circle.filled {
	border: 0.5vh solid white;
	background-color: white;
}

.divider:not(.white-bg):hover .circle {
	border: 0.5vh solid #595959;
}

.divider:not(.white-bg):hover .circle.filled {
	background-color: #595959;
}

.link-list {
	padding: 0 9vh 0;

	display: flex;
	justify-content: center;
	flex-wrap: wrap;
}

.with-nav {
	height: 71vh;
}

.image-link {
	position: relative;
	min-width: 50%;
	background-size: cover;
	background-repeat: no-repeat;
  background-position: center;
}

.image-link.full-width {
	width: 100%;
}

.link-wrapper {
	position: absolute;
	background-color: rgba(204, 204, 204, 0.9);
	width: 100%;
	height: 100%;
	transition: background-color 300ms ease;
}

.link-wrapper:hover {
	background-color: rgba(71, 102, 157, 0.9);
}

.link-wrapper > a {
	height: 100%;
	width: 100%;
	color: #47669d;

	display: flex;
	justify-content: center;
	align-items: center;
}

.link-wrapper > a:hover {
	color: white;
}

.ghostery {
	background-image: url("images/ghostery.png");
}

.cobu {
	background-image: url("images/cobu.png");
}

.soundcloud {
	background-image: url("images/soundcloud.png");
}

.resume {
	background-image: url("images/resume.png");
}

.jsequencer {
	background-image: url("images/jsequencer.png");
}

.breakup-squad {
	background-image: url("images/breakup-squad.png");
}

.one-open {
	background-image: url("images/one-open.png");
}

.github {
	background-image: url("images/github.png");
}

ul {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
}

li {
	margin: 2.5vh 0;

	display: flex;
	align-items: center;
}

li > p {
	font-size: 5vh;
	font-style: normal;
}

li > i {
	margin-right: 2vh;
}

.contact-icon {
	color: #47669d;
}

.add-margin {
	margin: .1vh 0 .9vh;
}

@media (max-width:632px) {
	section {
		position: relative;
	}

	.persistent, .bump {
		display: none;
	}

	.with-nav {
		height: 80vh;
	}

	.link-list {
		padding: 0;
	}

	.image-link {
		width: 100vw;
	}

	li > p, li > a {
		font-size: 3vh;
	}

	li > a:hover {
		font-size: 3vh;
	}

	a:hover {
		font-size: 5vh;
	}

	nav.persistent > a {
		font-size: 3vh;
		margin: 0 1vh;
	}

	nav.persistent > a:hover {
		font-size: 3vh;
		color: #595959;
	}

	.divider:hover {
		background-color: rgba(71, 102, 157, 0.6);
		color: white;
		font-size: 4vh;
	}

	.divider.white-bg {
		background-color: white;

	}

	.divider.white-bg:hover {
		background-color: white;
		color: #595959;
	}

	.divider:not(.white-bg):hover .circle {
		border: 0.5vh solid white;
	}

	.divider:not(.white-bg):hover .circle.filled {
		background-color: white;
	}

	.link-wrapper:hover {
		background-color: rgba(204, 204, 204, 0.9);
	}

	.link-wrapper > a:hover {
		color: #47669d;
	}
}

